fix footer layout issue seen on calendar page

--- a/themes/ro/scss/modules/_views.scss
+++ b/themes/ro/scss/modules/_views.scss
@@ -125,9 +125,6 @@ a.add-to-calendar {
       color: $um-blue;
     }
   }
-    footer {
-      margin-top: 4rem;
-    }
 }
 
 // Reports
